# learn_opengl_rust

./: Cargo.toml  README.md
examples/1_getting_started/: 10_transformations.rs  11_coord_system.rs  12_cube_3d.rs  13_multiple_cubes.rs  14_camera_circle.rs  15_camera_movement.rs  16_camera_system.rs  1_hello_triangle.rs  3_exercise1.rs  7_shader_class.rs  8_textures.rs  9_multi_tex.rs
examples/2_lighting/: 10_spot_light.rs  11_multiple_lights.rs  1_colors.rs  2_ambient_diffuse_specular.rs  3_phong_lighting.rs  4_phong_exercise_1.rs  5_phong_material_light.rs  6_lighting_maps.rs  7_lighting_maps_exercise_1.rs  8_directional_light.rs  9_point_light.rs
examples/3_model_loading/: 1_model_loading_backpack.rs  2_backpack_lighting.rs
examples/4_advanced_opengl/: 1_depth_test.rs  2_stencil_test.rs  3_blending.rs  4_face_culling.rs
examples/getting_started/: 11_coord_system.rs  12_cube_3d.rs  13_multiple_cubes.rs  14_camera_circle.rs  15_camera_movement.rs  8_textures.rs  exercise1.rs  exercise2.rs  exercise3.rs  hello_indexed.rs  hello_triangle.rs  interpolation_triangle.rs  multi_tex.rs  shader_class.rs  shader_class_example.rs  textures.rs
src/: camera.rs  lib.rs  main.rs  mesh.rs  model.rs  shader.rs  utils.rs
src/shaders/: multiple_tex.fs  shader.fs  tex_shader.fs  tex_shader.vs
src/shaders/1_getting_started/: shader.vs
src/shaders/2_lighting/: ambient_light.fs  basic_lighting.fs  diffuse_light.fs  diffuse_light.vs  directional_light.fs  emission_map.fs  lighting_maps.fs  lighting_maps.vs  material.fs  multiple_lights.fs  phong_light.fs  phong_light.vs  point_light.fs  specular_light.fs  spot_light.fs
src/shaders/3_model_loading/: model_lighting.fs  model_lighting.vs  model_loading.fs
src/shaders/4_advanced_opengl/: blending.fs  blending.vs  blending_object.fs  depth_testing.fs  stencil_testing_cube.fs  stencil_testing_plane.fs  stencil_testing_plane.vs
src/shaders/getting_started/: coord_systems.vs  multiple_tex.fs  transform.vs
