[package]
name = "learn_opengl_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.16.1"
gl = "0.10.0"
glfw = "0.54.0"
image = "0.19.0"
# only needed from chapter 3 on
tobj = "0.1.6"
num = "0.2.0"
rand = "0.5.5"

[[example]]
name = "hello_triangle"
path = "examples/getting_started/hello_triangle.rs"

[[example]]
name = "hello_indexed"
path = "examples/getting_started/hello_indexed.rs"

[[example]]
name = "exercise_1_1"
path = "examples/getting_started/exercise1.rs"

[[example]]
name = "exercise_1_2"
path = "examples/getting_started/exercise2.rs"

[[example]]
name = "interpolation"
path = "examples/getting_started/interpolation_triangle.rs"