[package]
name = "learn_opengl_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.16.1"
gl = "0.10.0"
glfw = "0.54.0"
image = "0.19.0"
# only needed from chapter 3 on
tobj = "0.1.6"
num = "0.2.0"
rand = "0.5.5"

## Examples

# Chapter 1

[[example]]
name = "hello_triangle"
path = "examples/1_getting_started/1_hello_triangle.rs"

[[example]]
name = "hello_indexed"
path = "examples/1_getting_started/2_hello_indexed.rs"

[[example]]
name = "exercise_1_1"
path = "examples/1_getting_started/3_exercise1.rs"

[[example]]
name = "exercise_1_2"
path = "examples/1_getting_started/4_exercise2.rs"

[[example]]
name = "exercise_1_3"
path = "examples/1_getting_started/5_exercise3.rs"

[[example]]
name = "interpolation"
path = "examples/1_getting_started/6_interpolation_triangle.rs"

[[example]]
name = "shader_class"
path = "examples/1_getting_started/7_shader_class.rs"

[[example]]
name = "textures"
path = "examples/1_getting_started/8_textures.rs"

[[example]]
name = "multiple_textures"
path = "examples/1_getting_started/9_multi_tex.rs"

[[example]]
name = "transformations"
path = "examples/1_getting_started/10_transformations.rs"

[[example]]
name = "coordinate_system"
path = "examples/1_getting_started/11_coord_system.rs"

[[example]]
name = "3D_cube"
path = "examples/1_getting_started/12_cube_3d.rs"

[[example]]
name = "cubes"
path = "examples/1_getting_started/13_multiple_cubes.rs"

[[example]]
name = "camera_circle"
path = "examples/1_getting_started/14_camera_circle.rs"

[[example]]
name = "camera_move"
path = "examples/1_getting_started/15_camera_movement.rs"

[[example]]
name = "camera_system"
path = "examples/1_getting_started/16_camera_system.rs"

# Chapter 2

[[example]]
name = "colors"
path = "examples/2_lighting/1_colors.rs"