[package]
name = "learn_opengl_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.16.1"
gl = "0.10.0"
glfw = "0.54.0"
image = "0.19.0"
tobj = "0.1.6"
num = "0.2.0"
rand = "0.5.5"

## Examples

# Chapter 1

[[example]]
name = "hello_triangle"
path = "examples/1_getting_started/1_hello_triangle.rs"

[[example]]
name = "hello_indexed"
path = "examples/1_getting_started/2_hello_indexed.rs"

[[example]]
name = "exercise_1_1"
path = "examples/1_getting_started/3_exercise1.rs"

[[example]]
name = "exercise_1_2"
path = "examples/1_getting_started/4_exercise2.rs"

[[example]]
name = "exercise_1_3"
path = "examples/1_getting_started/5_exercise3.rs"

[[example]]
name = "interpolation"
path = "examples/1_getting_started/6_interpolation_triangle.rs"

[[example]]
name = "shader_class"
path = "examples/1_getting_started/7_shader_class.rs"

[[example]]
name = "textures"
path = "examples/1_getting_started/8_textures.rs"

[[example]]
name = "multiple_textures"
path = "examples/1_getting_started/9_multi_tex.rs"

[[example]]
name = "transformations"
path = "examples/1_getting_started/10_transformations.rs"

[[example]]
name = "coordinate_system"
path = "examples/1_getting_started/11_coord_system.rs"

[[example]]
name = "3D_cube"
path = "examples/1_getting_started/12_cube_3d.rs"

[[example]]
name = "cubes"
path = "examples/1_getting_started/13_multiple_cubes.rs"

[[example]]
name = "camera_circle"
path = "examples/1_getting_started/14_camera_circle.rs"

[[example]]
name = "camera_move"
path = "examples/1_getting_started/15_camera_movement.rs"

[[example]]
name = "camera_system"
path = "examples/1_getting_started/16_camera_system.rs"

# Chapter 2

[[example]]
name = "colors"
path = "examples/2_lighting/1_colors.rs"

[[example]]
name = "phong_split"
path = "examples/2_lighting/2_ambient_diffuse_specular.rs"

[[example]]
name = "phong_lighting"
path = "examples/2_lighting/3_phong_lighting.rs"

[[example]]
name = "phong_exercise_1"
path = "examples/2_lighting/4_phong_exercise_1.rs"

[[example]]
name = "phong_material"
path = "examples/2_lighting/5_phong_material_light.rs"

[[example]]
name = "lighting_maps"
path = "examples/2_lighting/6_lighting_maps.rs"

[[example]]
name = "emission_map"
path = "examples/2_lighting/7_lighting_maps_exercise_1.rs"

[[example]]
name = "directional_light"
path = "examples/2_lighting/8_directional_light.rs"

[[example]]
name = "point_light"
path = "examples/2_lighting/9_point_light.rs"

[[example]]
name = "spot_light"
path = "examples/2_lighting/10_spot_light.rs"

[[example]]
name = "multiple_lights"
path = "examples/2_lighting/11_multiple_lights.rs"

#Chapter3

[[example]]
name = "backpack"
path = "examples/3_model_loading/1_model_loading_backpack.rs"

[[example]]
name = "backpack_lighting"
path = "examples/3_model_loading/2_backpack_lighting.rs"

#Chapter4

[[example]]
name = "depth_testing"
path = "examples/4_advanced_opengl/1_depth_test.rs"

[[example]]
name = "stencil"
path = "examples/4_advanced_opengl/2_stencil_test.rs"